--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,14 +6,14 @@
     outline: none;
     text-decoration: none;
     scroll-behavior: smooth;
-    /* scroll-snap-type: y mandatory; */
+    scroll-snap-type: y mandatory;
 }
 body{
     background: #DBF6E9;
-}
+}   
 .container{
     /* padding: 32px; */
-    
+    overflow-x: hidden;
 }
 a{
     color:#31326F;
@@ -23,10 +23,11 @@ nav{
     display: flex;
     justify-content: space-between;
     width:100%;
+    height:82px;
     align-items: center;
     padding: 0 32px;
     background:none;
-    position: fixed;
+    position: sticky;
     top: 0px;
 }
 
@@ -78,13 +79,14 @@ nav{
     top:0px;
     right:0;
      width: 100%;
-    height:80vh;
+    height:100%;
    display: none;
     background-color: white;
    text-align: center;
    color:rgba(49, 50, 111, 1);
    font-weight: 400;
    font-size: 2rem;
+   z-index:3;
    /* overflow:hidden; */
 }
 .add-navigation{
@@ -99,8 +101,8 @@ ul{
     display: flex;
     flex-direction: column;
     align-self: center;
-    height:480px;
-    padding-top: 6rem;
+    height:520px;
+    padding-top: 10rem;
     justify-content:space-evenly;
     
 }
@@ -206,10 +208,7 @@ color: #31326F;
    font-size:1.2rem;
 }
 
-.section-two,.section-three,.section-four,.section-five{
-    /* scroll-snap-align: start; */
-    
-}
+
 .section-two h1,.section-three div h1,.section-four div h1,.section-five h1{
     margin-top: 100px;
     font-weight: 300;
@@ -246,7 +245,7 @@ label{
     padding:8px 15.03px 1px 13px;
     color: rgba(28, 55, 42, 0.47);  
 }
-.grid-lay div{
+.grid-lay div,.role{
     font-weight: 600;
 font-size: 9px;
 line-height: 100%;
@@ -292,7 +291,7 @@ textarea:hover{
 .section-one-content{
     background: #DBF6E9;
     height: 100vh;
-    padding:110px 32px 0 32px;
+    padding:46px 32px 0 32px;
 }
 .top-header{
 font-style: normal;
@@ -307,7 +306,7 @@ opacity: 0.5;
 .bottom-header{
 font-style: normal;
 font-weight: 300;
-font-size: 64px;
+font-size: 61px;
 line-height: 100%;
 margin-bottom: 20px;
 letter-spacing: -0.015em;
@@ -323,7 +322,7 @@ span{
 font-style: normal;
 font-weight: normal;
 font-size: 18px;
-line-height: 160%;
+line-height: 170%;
 letter-spacing: -0.015em;
 color: #31326F;
 opacity: 0.4;
@@ -339,8 +338,23 @@ opacity: 0.4;
    position: fixed;
    width: 100%;
    height: 64px;
-   bottom: 30px;
+   bottom: 34px;
  }
+ 
+ /* .report{
+    display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   align-items: center;
+   padding: 16px;
+   width: auto;
+   height: 64px;
+   margin-right:13px;
+   background: #31326F;
+   border-radius: 4px;
+   color:#FFFFFF;
+   border: 3px solid #31326F;
+ } */
  
  .report{
     display: flex;
@@ -356,6 +370,7 @@ opacity: 0.4;
    color:#FFFFFF;
    border: 3px solid #31326F;
  }
+
  .report p{
      color:rgba(0,0,0,0,0.01); 
  }
@@ -531,6 +546,32 @@ opacity: 0.4;
 
 
 
+
+@media (max-width:350px) and (min-height:560px){
+    .bottom-header{
+        font-size: 50px;
+    }
+    .section-one-content{
+        padding-top: 17px;
+    }
+    .info{
+        font-size: 15px;
+    }
+    .registration-btn{
+        bottom:20px;
+    }
+    .report p{
+        font-size: 15px;
+    }
+    .volunteer p{
+        font-size: 15px;
+    }
+    .report,.volunteer{
+        padding:10px;
+        width:120px;
+        font-size: 5px;
+    }
+}
 
 
 
@@ -784,6 +825,10 @@ opacity: 0.4;
     .volunteer-form h6{
         width:400px;
         line-height:10px;
+    }
+    .section-one,.section-two,.section-three,.section-four,.section-five{
+        scroll-snap-align: start;
+        
     }
     .section-two{
         background: #A9E4D7;
